# NFCU-Sentinel-Lakehouse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  databricks-cd.yml
config/: pipelines.yaml
config/env/: dev.yaml
data/: README.md
data/raw/compliance/: blocked_entities.csv  fincen_advisories.json  ofac_watchlist.csv
data/raw/fiserv_dna/: transaction_detail.csv
data/raw/tsys_fis/: card_auth_stream.jsonl  card_clearing.csv
data/reference/: dataset_manifest.json
docs/: README.md
docs/00-input/: README.md  sources-index.md
docs/01-context/: project-context.md
docs/02-architecture/: diagram-analysis.md
docs/03-tech-stack/: databricks-native-stack.md
docs/04-plan/: execution-plan.md
docs/05-verification/: verification-log.md
docs/06-outputs/: README.md  cicd-promotion-rollback-runbook.md
infra/docs/: README.md
infra/sql/: 01_unity_catalog_setup.sql  02_storage_and_rbac.sql
orchestration/: databricks.yml
scripts/: generate_sprint1_synthetic_data.py  run_sprint1_bronze_local.py
scripts/databricks/: run_single_bronze_spark.py  run_sprint1_bronze_spark.py
src/nfcu_sentinel/: __init__.py
src/nfcu_sentinel/pipelines/bronze/: __init__.py  b001_core_banking.py  b002_card_transactions.py  b003_compliance_reference.py  common.py  spark_jobs.py  sprint1_runner.py
src/nfcu_sentinel/utils/: __init__.py  audit.py  config.py  dq_checks.py  error_handler.py  logging_utils.py  spark_io.py  watermark.py
tests/: test_bronze_transforms.py  test_config.py  test_dq_checks.py  test_sprint1_runner.py  test_watermark.py
